integrating sepsis_labeler into project

--- a/experiments/notebooks/meas_dist.ipynb
+++ b/experiments/notebooks/meas_dist.ipynb
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/local-scratch/nigam/envs/jlemmon/conl/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
+      "/local-scratch/nigam/envs/jlemmon/conl/lib/python3.9/site-packages/google/auth/_default.py:81: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
       "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
      ]
     }
@@ -4452,6 +4452,361 @@
    "source": [
     "with pd.option_context('display.max_rows', None, 'display.max_columns', None): \n",
     "    display(spo2_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = f'''SELECT measurement_concept_id, c.concept_name, unit_concept_id, unit_source_value, count(measurement_id) as cnt \n",
+    "FROM `som-nero-nigam-starr.starr_omop_cdm5_deid_2022_08_01.measurement` \n",
+    "left join `som-nero-nigam-starr.starr_omop_cdm5_deid_2022_08_01.concept` c on c.concept_id = measurement_concept_id\n",
+    "where measurement_concept_id in (SELECT\n",
+    "                c.concept_id\n",
+    "            FROM `som-nero-nigam-starr.starr_omop_cdm5_deid_2022_08_01.concept` c\n",
+    "            INNER JOIN `som-nero-nigam-starr.starr_omop_cdm5_deid_2022_08_01.concept_ancestor` ca\n",
+    "                ON c.concept_id = ca.descendant_concept_id\n",
+    "                AND ca.ancestor_concept_id in (37029387,4013964,2212294,3051825)\n",
+    "                AND c.invalid_reason is null\n",
+    "            ) and value_as_number is not null\n",
+    "group by  measurement_concept_id, c.concept_name, unit_concept_id, unit_source_value\n",
+    "order by cnt desc'''\n",
+    "crea_df = pd.read_gbq(query, project_id=rs_dataset_project, dialect='standard', credentials=credentials)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>measurement_concept_id</th>\n",
+       "      <th>concept_name</th>\n",
+       "      <th>unit_concept_id</th>\n",
+       "      <th>unit_source_value</th>\n",
+       "      <th>cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>8840</td>\n",
+       "      <td>mg/dL</td>\n",
+       "      <td>10013137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4013964</td>\n",
+       "      <td>Creatinine measurement, serum</td>\n",
+       "      <td>8840</td>\n",
+       "      <td>mg/dL</td>\n",
+       "      <td>255225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4013964</td>\n",
+       "      <td>Creatinine measurement, serum</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>None</td>\n",
+       "      <td>246711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2212294</td>\n",
+       "      <td>Creatinine; blood</td>\n",
+       "      <td>8840</td>\n",
+       "      <td>mg/dL</td>\n",
+       "      <td>73919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>8840</td>\n",
+       "      <td>MG/DL</td>\n",
+       "      <td>27534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4013964</td>\n",
+       "      <td>Creatinine measurement, serum</td>\n",
+       "      <td>8840</td>\n",
+       "      <td>mg/dL (See scan or EMR data for detail)</td>\n",
+       "      <td>25319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>8840</td>\n",
+       "      <td>mg/dl</td>\n",
+       "      <td>17172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>None</td>\n",
+       "      <td>11185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MG/DL</td>\n",
+       "      <td>552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>0</td>\n",
+       "      <td>mg/dL</td>\n",
+       "      <td>193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>3051825</td>\n",
+       "      <td>Creatinine [Mass/volume] in Blood</td>\n",
+       "      <td>8840</td>\n",
+       "      <td>mg/dL</td>\n",
+       "      <td>143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2212294</td>\n",
+       "      <td>Creatinine; blood</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>None</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>4013964</td>\n",
+       "      <td>Creatinine measurement, serum</td>\n",
+       "      <td>8840</td>\n",
+       "      <td>mg/dl</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>4013964</td>\n",
+       "      <td>Creatinine measurement, serum</td>\n",
+       "      <td>8749</td>\n",
+       "      <td>umol/L</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>3051825</td>\n",
+       "      <td>Creatinine [Mass/volume] in Blood</td>\n",
+       "      <td>0</td>\n",
+       "      <td>mg/dL</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>8837</td>\n",
+       "      <td>mcg/dL</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>0</td>\n",
+       "      <td>U</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>4013964</td>\n",
+       "      <td>Creatinine measurement, serum</td>\n",
+       "      <td>8713</td>\n",
+       "      <td>g/dL</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>8840</td>\n",
+       "      <td>mg/DL</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PAVAH</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>4013964</td>\n",
+       "      <td>Creatinine measurement, serum</td>\n",
+       "      <td>8518</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>4013964</td>\n",
+       "      <td>Creatinine measurement, serum</td>\n",
+       "      <td>8505</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>4013964</td>\n",
+       "      <td>Creatinine measurement, serum</td>\n",
+       "      <td>0</td>\n",
+       "      <td>md/dL</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>0</td>\n",
+       "      <td>mg/ dL</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>9557</td>\n",
+       "      <td>mEq/L</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>0</td>\n",
+       "      <td>MuirLab</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>3016723</td>\n",
+       "      <td>Creatinine [Mass/volume] in Serum or Plasma</td>\n",
+       "      <td>8840</td>\n",
+       "      <td>Mg/dL</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    measurement_concept_id                                 concept_name  \\\n",
+       "0                  3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "1                  4013964                Creatinine measurement, serum   \n",
+       "2                  4013964                Creatinine measurement, serum   \n",
+       "3                  2212294                            Creatinine; blood   \n",
+       "4                  3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "5                  4013964                Creatinine measurement, serum   \n",
+       "6                  3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "7                  3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "8                  3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "9                  3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "10                 3051825            Creatinine [Mass/volume] in Blood   \n",
+       "11                 2212294                            Creatinine; blood   \n",
+       "12                 4013964                Creatinine measurement, serum   \n",
+       "13                 4013964                Creatinine measurement, serum   \n",
+       "14                 3051825            Creatinine [Mass/volume] in Blood   \n",
+       "15                 3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "16                 3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "17                 4013964                Creatinine measurement, serum   \n",
+       "18                 3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "19                 3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "20                 4013964                Creatinine measurement, serum   \n",
+       "21                 4013964                Creatinine measurement, serum   \n",
+       "22                 4013964                Creatinine measurement, serum   \n",
+       "23                 3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "24                 3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "25                 3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "26                 3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "27                 3016723  Creatinine [Mass/volume] in Serum or Plasma   \n",
+       "\n",
+       "    unit_concept_id                        unit_source_value       cnt  \n",
+       "0              8840                                    mg/dL  10013137  \n",
+       "1              8840                                    mg/dL    255225  \n",
+       "2              <NA>                                     None    246711  \n",
+       "3              8840                                    mg/dL     73919  \n",
+       "4              8840                                    MG/DL     27534  \n",
+       "5              8840  mg/dL (See scan or EMR data for detail)     25319  \n",
+       "6              8840                                    mg/dl     17172  \n",
+       "7              <NA>                                     None     11185  \n",
+       "8                 0                       MG/DL                    552  \n",
+       "9                 0                       mg/dL                    193  \n",
+       "10             8840                                    mg/dL       143  \n",
+       "11             <NA>                                     None        26  \n",
+       "12             8840                                    mg/dl        19  \n",
+       "13             8749                                   umol/L         7  \n",
+       "14                0                      mg/dL                       6  \n",
+       "15             8837                                   mcg/dL         4  \n",
+       "16                0                       U                          4  \n",
+       "17             8713                                     g/dL         2  \n",
+       "18             8840                                    mg/DL         1  \n",
+       "19                0                                    PAVAH         1  \n",
+       "20             8518                                        H         1  \n",
+       "21             8505                                        H         1  \n",
+       "22                0                                    md/dL         1  \n",
+       "23                0                                   mg/ dL         1  \n",
+       "24             9557                                    mEq/L         1  \n",
+       "25                0                                  MuirLab         1  \n",
+       "26                0                                     1.30         1  \n",
+       "27             8840                                    Mg/dL         1  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "with pd.option_context('display.max_rows', None, 'display.max_columns', None): \n",
+    "    display(crea_df)"
    ]
   },
   {
