Creating constrained-cohort specific scripts, expanding scenario 3 scripts to use varying amounts of data

--- a/experiments/notebooks/add_lab_tasks.ipynb
+++ b/experiments/notebooks/add_lab_tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         -3134472912893814959\n",
+       "1          4480474938827236338\n",
+       "2         -3560330683692477362\n",
+       "3         -4753983747243999108\n",
+       "4         -7773785417047211617\n",
+       "                  ...         \n",
+       "316192     1804162505245553017\n",
+       "316193     2615013708302764373\n",
+       "316194    -4824395189820815920\n",
+       "316195    -2202492482082563123\n",
+       "316196     3653428970191862623\n",
+       "Name: prediction_id, Length: 274430, dtype: Int64"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pi = cohort['prediction_id']\n",
+    "pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,18 +122,19 @@
     "    rs_dataset=\"jlemmon_explore\",\n",
     "    cohort_name=\"tl_admission_rollup_temp\",\n",
     "    target_table_name=\"lab_test_admissions_rollup_filtered_labeled\",\n",
+    "    dataset=\"starr_omop_cdm5_deid_2022_08_01\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# obtain all labels except for readmission\n",
-    "# labeler.create_label_table(exclude_labeler_ids=['mortality','los_7','icu_admission','readmission_30'])\n",
+    "labeler.create_label_table(exclude_labeler_ids=['mortality','los_7','icu_admission','readmission_30'])\n",
     "\n",
     "df = pd.read_gbq(\n",
     "    \"select * from `som-nero-nigam-starr.jlemmon_explore.lab_test_admissions_rollup_filtered_labeled`\",\n",
@@ -111,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -408,14 +441,14 @@
        "      <td>13</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-07-25 03:03:00</td>\n",
        "      <td>0</td>\n",
        "      <td>NaT</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-07-25 03:03:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-07-25 03:03:00</td>\n",
        "      <td>0</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
@@ -432,8 +465,8 @@
        "      <td>10</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-08-04 17:28:00</td>\n",
        "      <td>0</td>\n",
        "      <td>NaT</td>\n",
        "      <td>0</td>\n",
@@ -508,8 +541,8 @@
        "...                 ...       ...    ...  ...              ...   \n",
        "274425                0         1      0  ...                0   \n",
        "274426                0         4      0  ...                0   \n",
-       "274427                1        13      1  ...                0   \n",
-       "274428                0        10      1  ...                0   \n",
+       "274427                1        13      1  ...                1   \n",
+       "274428                0        10      1  ...                1   \n",
        "274429                0         5      0  ...                0   \n",
        "\n",
        "        anemia_dx_start_datetime  hyperkalemia_dx_label  \\\n",
@@ -521,8 +554,8 @@
        "...                          ...                    ...   \n",
        "274425                       NaT                      0   \n",
        "274426                       NaT                      0   \n",
-       "274427                       NaT                      0   \n",
-       "274428                       NaT                      0   \n",
+       "274427       2022-07-25 03:03:00                      0   \n",
+       "274428       2022-08-04 17:28:00                      0   \n",
        "274429                       NaT                      0   \n",
        "\n",
        "       hyperkalemia_dx_start_datetime  hyponatremia_dx_label  \\\n",
@@ -534,7 +567,7 @@
        "...                               ...                    ...   \n",
        "274425                            NaT                      0   \n",
        "274426                            NaT                      0   \n",
-       "274427                            NaT                      0   \n",
+       "274427                            NaT                      1   \n",
        "274428                            NaT                      0   \n",
        "274429                            NaT                      0   \n",
        "\n",
@@ -547,7 +580,7 @@
        "...                               ...                       ...   \n",
        "274425                            NaT                         0   \n",
        "274426                            NaT                         0   \n",
-       "274427                            NaT                         0   \n",
+       "274427            2022-07-25 03:03:00                         1   \n",
        "274428                            NaT                         0   \n",
        "274429                            NaT                         0   \n",
        "\n",
@@ -560,7 +593,7 @@
        "...                                   ...                  ...   \n",
        "274425                                NaT                    0   \n",
        "274426                                NaT                    0   \n",
-       "274427                                NaT                    0   \n",
+       "274427                2022-07-25 03:03:00                    0   \n",
        "274428                                NaT                    0   \n",
        "274429                                NaT                    0   \n",
        "\n",
@@ -580,7 +613,7 @@
        "[274430 rows x 151 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +644,7 @@
        "Name: thrombocytopenia_lab_severe_label, Length: 527806, dtype: Int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
