--- a/experiments/notebooks/demographics.ipynb
+++ b/experiments/notebooks/demographics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "cohort_path = \"/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/\"\n",
-    "tasks=['hospital_mortality','sepsis','LOS_7','readmission_30', 'aki1_label','aki2_label','hg_label','np_500_label','np_1000_label']"
+    "tasks=['hospital_mortality','sepsis','LOS_7','readmission_30','hyperkalemia_lab_mild_label','hyperkalemia_lab_moderate_label','hyperkalemia_lab_severe_label','hyperkalemia_lab_abnormal_label','hypoglycemia_lab_mild_label','hypoglycemia_lab_moderate_label','hypoglycemia_lab_severe_label','hypoglycemia_lab_abnormal_label','neutropenia_lab_mild_label','neutropenia_lab_moderate_label','neutropenia_lab_severe_label','hyponatremia_lab_mild_label','hyponatremia_lab_moderate_label','hyponatremia_lab_severe_label','hyponatremia_lab_abnormal_label','aki_lab_aki1_label','aki_lab_aki2_label','aki_lab_aki3_label','aki_lab_abnormal_label','anemia_lab_mild_label','anemia_lab_moderate_label','anemia_lab_severe_label','anemia_lab_abnormal_label','thrombocytopenia_lab_mild_label','thrombocytopenia_lab_moderate_label','thrombocytopenia_lab_severe_label','thrombocytopenia_lab_abnormal_label']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/cohort/cohort_split.parquet\n"
+      "/local-scratch/nigam/projects/jlemmon/transfer_learning/experiments/data/cohort/cohort_split_no_nb.parquet\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
     "cohort = read_file(\n",
     "    os.path.join(\n",
     "        cohort_path,\n",
-    "        \"cohort/cohort_split.parquet\"\n",
+    "        \"cohort/cohort_split_no_nb.parquet\"\n",
     "    ),\n",
     "    engine='pyarrow'\n",
     ")"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -102,44 +102,94 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>person_id</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>fold_id</th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>47988</td>\n",
+       "      <th>51</th>\n",
+       "      <td>29939372</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>test</th>\n",
-       "      <td>14929</td>\n",
+       "      <th>68</th>\n",
+       "      <td>29941136</td>\n",
+       "      <td>val</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>val</th>\n",
-       "      <td>8469</td>\n",
+       "      <th>71</th>\n",
+       "      <td>29941317</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>29941910</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>504</th>\n",
+       "      <td>30044852</td>\n",
+       "      <td>val</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232284</th>\n",
+       "      <td>85698351</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232285</th>\n",
+       "      <td>85699500</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232286</th>\n",
+       "      <td>85700562</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232287</th>\n",
+       "      <td>86280289</td>\n",
+       "      <td>test</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232288</th>\n",
+       "      <td>86285072</td>\n",
+       "      <td>test</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>16432 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         person_id\n",
-       "fold_id           \n",
-       "0            47988\n",
-       "test         14929\n",
-       "val           8469"
+       "        person_id fold_id\n",
+       "51       29939372       0\n",
+       "68       29941136     val\n",
+       "71       29941317    test\n",
+       "78       29941910       0\n",
+       "504      30044852     val\n",
+       "...           ...     ...\n",
+       "232284   85698351    test\n",
+       "232285   85699500    test\n",
+       "232286   85700562    test\n",
+       "232287   86280289    test\n",
+       "232288   86285072    test\n",
+       "\n",
+       "[16432 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ped_cohort[[\"person_id\", \"fold_id\"]].groupby([\"fold_id\"]).count()"
+    "ped_cohort.query(\"admission_year>=2018\")[[\"person_id\", \"fold_id\"]].groupby([\"fold_id\"]).count()"
    ]
   },
   {
@@ -169,35 +219,85 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>person_id</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>fold_id</th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>175761</td>\n",
+       "      <td>29936887</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>test</th>\n",
-       "      <td>38035</td>\n",
+       "      <th>1</th>\n",
+       "      <td>29936888</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>val</th>\n",
-       "      <td>31015</td>\n",
+       "      <th>2</th>\n",
+       "      <td>29936900</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>29936906</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29936914</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274191</th>\n",
+       "      <td>43705036</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274196</th>\n",
+       "      <td>43705412</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274216</th>\n",
+       "      <td>43742869</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274219</th>\n",
+       "      <td>43743212</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274407</th>\n",
+       "      <td>80496266</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>185370 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         person_id\n",
-       "fold_id           \n",
-       "0           175761\n",
-       "test         38035\n",
-       "val          31015"
+       "        person_id fold_id\n",
+       "0        29936887       0\n",
+       "1        29936888       0\n",
+       "2        29936900       0\n",
+       "3        29936906       0\n",
+       "4        29936914       0\n",
+       "...           ...     ...\n",
+       "274191   43705036       0\n",
+       "274196   43705412       0\n",
+       "274216   43742869       0\n",
+       "274219   43743212       0\n",
+       "274407   80496266       0\n",
+       "\n",
+       "[185370 rows x 2 columns]"
       ]
      },
      "execution_count": 15,
@@ -206,49 +306,45 @@
     }
    ],
    "source": [
-    "ad_cohort[[\"person_id\", \"fold_id\"]].groupby([\"fold_id\"]).count()"
+    "ad_cohort.query(\"admission_year<=2019\")[[\"person_id\", \"fold_id\"]]#.groupby([\"fold_id\"]).count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  task   fold  prevalence  total_pos  total_pats\n",
-      "0   hospital_mortality  train    1.859094       4112      221183\n",
-      "1   hospital_mortality    val    1.767210        689       38988\n",
-      "2   hospital_mortality   test    1.625769        854       52529\n",
-      "3               sepsis  train    2.550581       5040      197602\n",
-      "4               sepsis    val    2.641997        921       34860\n",
-      "5               sepsis   test    1.920877        890       46333\n",
-      "6                LOS_7  train   18.449429      40807      221183\n",
-      "7                LOS_7    val   18.454396       7195       38988\n",
-      "8                LOS_7   test   19.421653      10202       52529\n",
-      "9       readmission_30  train    4.824852      10428      216131\n",
-      "10      readmission_30    val    4.744047       1809       38132\n",
-      "11      readmission_30   test    4.585089       2361       51493\n",
-      "12       icu_admission  train    5.440426      11097      203973\n",
-      "13       icu_admission    val    5.516376       1979       35875\n",
-      "14       icu_admission   test    6.694700       3216       48038\n",
-      "15          aki1_label  train    6.983498      14380      205914\n",
-      "16          aki1_label    val    6.948732       2521       36280\n",
-      "17          aki1_label   test    5.118086       2529       49413\n",
-      "18          aki2_label  train    2.281629       4934      216249\n",
-      "19          aki2_label    val    2.120791        808       38099\n",
-      "20          aki2_label   test    1.856216        953       51341\n",
-      "21            hg_label  train    2.583549       5481      212150\n",
-      "22            hg_label    val    2.635526        984       37336\n",
-      "23            hg_label   test    3.505539       1731       49379\n",
-      "24        np_500_label  train    0.715169       1579      220787\n",
-      "25        np_500_label    val    0.665263        259       38932\n",
-      "26        np_500_label   test    0.327569        172       52508\n",
-      "27       np_1000_label  train    1.166847       2572      220423\n",
-      "28       np_1000_label    val    1.139374        443       38881\n",
-      "29       np_1000_label   test    0.783469        411       52459\n"
+      "                                   task   fold  prevalence  total_pos  \\\n",
+      "0                    hospital_mortality  train    2.135311       3907   \n",
+      "1                    hospital_mortality    val    2.169691        458   \n",
+      "2                    hospital_mortality   test    2.009877        757   \n",
+      "3                                sepsis  train    2.927282       4734   \n",
+      "4                                sepsis    val    2.302214        417   \n",
+      "..                                  ...    ...         ...        ...   \n",
+      "88    thrombocytopenia_lab_severe_label    val    2.186002        456   \n",
+      "89    thrombocytopenia_lab_severe_label   test    2.219475        826   \n",
+      "90  thrombocytopenia_lab_abnormal_label  train   17.123963      27423   \n",
+      "91  thrombocytopenia_lab_abnormal_label    val   15.033719       2742   \n",
+      "92  thrombocytopenia_lab_abnormal_label   test   14.883495       4912   \n",
+      "\n",
+      "    total_pats  \n",
+      "0       182971  \n",
+      "1        21109  \n",
+      "2        37664  \n",
+      "3       161720  \n",
+      "4        18113  \n",
+      "..         ...  \n",
+      "88       20860  \n",
+      "89       37216  \n",
+      "90      160144  \n",
+      "91       18239  \n",
+      "92       33003  \n",
+      "\n",
+      "[93 rows x 5 columns]\n"
      ]
     }
    ],
@@ -256,7 +352,7 @@
     "prev_df = pd.DataFrame()\n",
     "for task in tasks:\n",
     "    for fold in [\"0\", \"val\", \"test\"]:\n",
-    "        c_df = cohort[[\"person_id\",f\"{task}\", f\"{task}_fold_id\"]].query(f\"{task}_fold_id==@fold\")\n",
+    "        c_df = ad_cohort[[\"person_id\",f\"{task}\", f\"{task}_fold_id\"]].query(f\"{task}_fold_id==@fold\")\n",
     "        s = c_df.query(f\"{task}==1\")[task].sum()\n",
     "        df = pd.DataFrame()\n",
     "        df_dict = {\"task\":[task],\n",
